--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="css/main.css">
 	<!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet"> -->
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>
 	<script src="js/slick.js"></script>
 	<script src="js/main.js"></script>
 </head>
@@ -40,9 +41,9 @@
 					<img src="img/icon-menu.png" alt="" id="active-mini-menu">
 					<ul id="nav">
 						<li class="down-menu"><a href="#"><h4>Каталог товаров</h4></a>
-							<ul class="dm" style="display: none;">
-								<li class="right-menu right-menu1"><a href="#"><h5>Свадебная бижутерия</h5></a>
-									<ul class="rm1" style="display: none;">
+							<ul style="display: none;">
+								<li class="right-menu"><a href="#"><h5>Свадебная бижутерия</h5></a>
+									<ul style="display: none;">
 										<li><h4>Свадебная бижутерия</h4></li>
 										<li><a href="#"><h5>Свадебная</h5></a></li>
 										<li><a href="#"><h5>Бижутерия</h5></a></li>
@@ -50,8 +51,8 @@
 								</li>
 								<li><a href="#"><h5>Аксесуары для волос</h5></a></li>
 								<li><a href="#"><h5>Броши</h5></a></li>
-								<li class="right-menu right-menu1"><a href="#"><h5>Мужские аксессуары</h5></a>
-									<ul class="rm1" style="display: none;">
+								<li class="right-menu"><a href="#"><h5>Мужские аксессуары</h5></a>
+									<ul style="display: none;">
 										<li><h4>Мужская бижутерия</h4></li>
 										<li><a href="#"><h5>Браслеты</h5></a></li>
 										<li><a href="#"><h5>Кулоны</h5></a></li>
@@ -89,11 +90,11 @@
 		<div id="header-mobile">
 			<ul class="menu-mobile">
 				<li class="drop-mobile-menu"><img src="img/mobi/drop-menu-icon.png" alt="">
-					<ul id="nav-mobile" class="dm" style="display: none;">
-						<li class="right-menu right-menu1"><a href="#"><h5>Каталог товаров</h5></a>
-							<ul class="rm1" style="display: none;">
-								<li class="right-menu right-menu2"><a href="#"><h5>Свадебная бижутерия</h5></a>
-									<ul class="rm2" style="display: none;">
+					<ul id="nav-mobile" style="display: none;">
+						<li class="right-menu"><a href="#"><h5>Каталог товаров</h5></a>
+							<ul style="display: none;">
+								<li class="right-menu"><a href="#"><h5>Свадебная бижутерия</h5></a>
+									<ul style="display: none;">
 										<li><h4>Свадебная бижутерия</h4></li>
 										<li><a href="#"><h5>Свадебная</h5></a></li>
 										<li><a href="#"><h5>Бижутерия</h5></a></li>
@@ -101,8 +102,8 @@
 								</li>
 								<li><a href="#"><h5>Аксесуары для волос</h5></a></li>
 								<li><a href="#"><h5>Броши</h5></a></li>
-								<li class="right-menu right-menu2"><a href="#"><h5>Мужские аксессуары</h5></a>
-									<ul class="rm2" style="display: none;">
+								<li class="right-menu"><a href="#"><h5>Мужские аксессуары</h5></a>
+									<ul style="display: none;">
 										<li><h4>Мужская бижутерия</h4></li>
 										<li><a href="#"><h5>Браслеты</h5></a></li>
 										<li><a href="#"><h5>Кулоны</h5></a></li>
